Bug 238554 - Line width setting for chart is not used
Summary: Line width setting for chart is not used
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-23 06:24 UTC by Alvaro Soliverez
Modified: 2010-05-23 20:24 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alvaro Soliverez 2010-05-23 06:24:07 UTC
Version:            (using KDE 4.4.3)
OS:                Linux
Installed from:    Archlinux Packages

The line width setting recently added is not being used. This bug has two parts:

1. Setting the default width when creating reports
The class MyMoneyReport has to load the default value from the config instead of setting to a fixed value of 2

2. Actually modifying the line width
The method KReportChartView::setLineWidth should modify the line width of the chart lines, but it isn't working at the moment
Comment 1 Alvaro Soliverez 2010-05-23 20:24:26 UTC
SVN commit 1129780 by asoliverez:

Fixed the way the line width was being set in the charts, and how the mymoneyreport was being instantiated to get the line width value from the settings.

BUG:238554

 M  +9 -3      mymoney/mymoneyreport.cpp  
 M  +7 -2      reports/kreportchartview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1129780