Fixed the way the line width was being set in the charts, and how the mymoneyreport was being instantiated to get the line width value from the settings.

BUG:238554

svn path=/trunk/playground/office/kmymoney/; revision=1129780